# latency-benchmark

./: .clang-format  CMakeLists.txt  LICENSE  README.md  format.sh
.github/workflows/: build_and_test.yml  cmake-single-platform.yml
examples/: CMakeLists.txt
examples/orderbook/: CMakeLists.txt  orderbook_benchmark.cpp
examples/orderbook/devices/: ExchangeOrderBookDevice.hpp  MessageBusDevice.hpp  OrderGeneratorDevice.hpp
examples/orderbook/tests/: TestMessageBusDevice.cpp
include/latencybenchmark/base/: CallbackStorage.hpp  Device.hpp  Pad.hpp  Task.hpp  Utils.hpp
include/latencybenchmark/measurement/: Percentile.hpp  Throughput.hpp
include/orderbook/common/: Bitmap.hpp  CircularQueue.hpp  HashMap.hpp  Log.hpp  ObjectList.hpp  ObjectPool.hpp  SpscMessageBus.hpp
include/orderbook/exchange/: ExchangeOrderBook.hpp  ExchangeOrders.hpp  ExchangePriceLevel.hpp  ItchMessage.hpp  OrderMessage.hpp
src/base/: Device.hpp  Pad.hpp
src/common/: CallbackStorage.hpp  HashMap.hpp  ObjectPool.hpp
src/devices/: ExchangeOrderBookDevice.hpp  MessageBusDevice.hpp  OrderGeneratorDevice.hpp
src/exchange/: ExchangeOrderBook.hpp  ExchangeOrders.hpp  ExchangePriceLevel.hpp  ItchMessage.hpp
src/instrument/: Benchmark.hpp  OrderGenerator.hpp
src/methods/: Percentile.hpp  Throughput.hpp
tests/: CMakeLists.txt  TestDevices.cpp  TestExchangeOrderBook.cpp  TestHashMap.cpp  TestObjectList.cpp  TestObjectPool.cpp
